# mqtt_automation

./: pyproject.toml
mqtt_automation/: __init__.py  cli.py
systemd/: mqtt_automation.service
